tools demo - Jasypt 是一个 Java 库，它允许开发者以最小的努力为他/她的项目添加基本的加密功能，而且不需要对密码学的工作原理有深刻的了解。

--- a/spring-boot-example/E.tools/pom.xml
+++ b/spring-boot-example/E.tools/pom.xml
@@ -23,6 +23,7 @@
         <module>google-zxing</module>
         <module>h2database</module>
         <module>ip2region</module>
+        <module>jasypt</module>
         <module>jjwt</module>
         <module>jsch</module>
         <module>kaptcha</module>
