--- a/spring-boot-example/pom.xml
+++ b/spring-boot-example/pom.xml
@@ -11,16 +11,16 @@
     <description>Demo project for Spring Boot</description>
 
     <properties>
-        <revision>1.0.0</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <spring-boot.version>2.3.2.RELEASE</spring-boot.version>
+        <revision>1.0.0</revision>
+        <spring-boot.version>2.5.4</spring-boot.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
-            <!-- SpringBoot 依赖配置 -->
+            <!-- spring boot -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
