--- a/spring-boot-example/B.features/pom.xml
+++ b/spring-boot-example/B.features/pom.xml
@@ -3,25 +3,25 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <artifactId>B.features</artifactId>
+    <packaging>pom</packaging>
+    <name>features</name>
+    <description>Spring Boot 中的一些功能特性</description>
+
     <parent>
         <artifactId>spring-boot-example</artifactId>
         <groupId>com.example</groupId>
         <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>B.features</artifactId>
-    <packaging>pom</packaging>
-
-    <name>features</name>
-    <description>Spring Boot 中的一些功能特性</description>
 
     <modules>
         <module>auto-configuration</module>
         <module>bean-validation</module>
-        <!--TODO 基于Spring Schedule动态定时任务实现-->
         <module>dynamic-scheduling</module>
         <module>externalized-configuration</module>
-        <module>internationalization</module>
+        <module>i18n</module>
         <module>logging</module>
         <module>sending-email</module>
         <module>testing</module>
