--- a/spring-boot-example/D.integration/zookeeper-integration-demo/pom.xml
+++ b/spring-boot-example/D.integration/zookeeper-integration-demo/pom.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <artifactId>zookeeper-integration-demo</artifactId>
+    <name>zookeeper-integration-demo</name>
+    <description>zookeeper集成示例</description>
+
     <parent>
         <artifactId>D.integration</artifactId>
         <groupId>com.example</groupId>
         <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>zookeeper-integration-demo</artifactId>
-    <name>zookeeper-integration-demo</name>
-    <description>Demo project for Spring Boot</description>
 
     <properties>
         <zookeeper.version>3.6.1</zookeeper.version>
@@ -42,12 +45,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.junit.vintage</groupId>
-                    <artifactId>junit-vintage-engine</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
     </dependencies>
 
