--- a/spring-boot-example/A.using/pom.xml
+++ b/spring-boot-example/A.using/pom.xml
@@ -9,7 +9,7 @@
         <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>A.hello</artifactId>
+    <artifactId>A.using</artifactId>
     <packaging>pom</packaging>
 
     <name>hello</name>
