--- a/spring-boot-example/E.tools/pom.xml
+++ b/spring-boot-example/E.tools/pom.xml
@@ -3,17 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <artifactId>E.tools</artifactId>
+    <packaging>pom</packaging>
+    <name>starters</name>
+    <description>Spring Boot 与一些框架工具的集成示例</description>
+
     <parent>
         <artifactId>spring-boot-example</artifactId>
         <groupId>com.example</groupId>
         <version>${revision}</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>E.tools</artifactId>
-    <packaging>pom</packaging>
-
-    <name>starters</name>
-    <description>Spring Boot 与一些框架工具的集成示例</description>
 
     <modules>
         <module>apache-poi</module>
@@ -31,7 +32,7 @@
         <module>p6spy</module>
         <module>springdoc-openapi</module>
         <module>springfox-swagger</module>
-        <module>useragentutils</module>
+        <module>user-agent-utils</module>
     </modules>
 
 </project>
