using example: package zip

--- a/spring-boot-example/A.using/pom.xml
+++ b/spring-boot-example/A.using/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>hello-world</module>
         <module>package-war</module>
+        <module>package-zip</module>
     </modules>
 
 </project>
