using example: package image

--- a/spring-boot-example/A.using/pom.xml
+++ b/spring-boot-example/A.using/pom.xml
@@ -18,6 +18,7 @@
 
     <modules>
         <module>hello-world</module>
+        <module>package-image</module>
         <module>package-war</module>
         <module>package-zip</module>
     </modules>
