--- a/spring-boot-example/pom.xml
+++ b/spring-boot-example/pom.xml
@@ -21,6 +21,7 @@
     <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
     <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
+    <docker-maven-plugin.version>0.38.0</docker-maven-plugin.version>
   </properties>
 
   <dependencyManagement>
