using example: devtools

--- a/spring-boot-example/A.using/pom.xml
+++ b/spring-boot-example/A.using/pom.xml
@@ -17,6 +17,7 @@
     </parent>
 
     <modules>
+        <module>devtools</module>
         <module>hello-world</module>
         <module>package-image</module>
         <module>package-war</module>
