--- a/spring-boot-example/B.features/pom.xml
+++ b/spring-boot-example/B.features/pom.xml
@@ -19,6 +19,7 @@
 
   <modules>
     <module>aop</module>
+    <module>async</module>
     <module>auto-configuration</module>
     <module>bean-validation</module>
     <module>dynamic-scheduling</module>
