feature example: scheduling - 定时任务调度

--- a/spring-boot-example/B.features/scheduling/pom.xml
+++ b/spring-boot-example/B.features/scheduling/pom.xml
@@ -12,21 +12,14 @@
   </parent>
 
   <artifactId>scheduling</artifactId>
+  <packaging>pom</packaging>
 
   <name>scheduling</name>
   <description>定时任务调度</description>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <optional>true</optional>
-    </dependency>
-  </dependencies>
+  <modules>
+    <module>quartz-scheduler</module>
+    <module>spring-task</module>
+  </modules>
 
 </project>
