--- a/spring-boot-example/B.features/scheduling/spring-task/pom.xml
+++ b/spring-boot-example/B.features/scheduling/spring-task/pom.xml
@@ -5,37 +5,21 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <artifactId>B.features</artifactId>
     <groupId>com.example</groupId>
-    <relativePath>../pom.xml</relativePath>
+    <artifactId>scheduling</artifactId>
     <version>${revision}</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>quartz-scheduler</artifactId>
+  <artifactId>spring-task</artifactId>
 
-  <name>quartz-scheduler</name>
-  <description>定时任务调度 - quartz实现</description>
+  <name>spring-task</name>
+  <description>spring-task</description>
 
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-jdbc</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-quartz</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <scope>runtime</scope>
     </dependency>
 
     <dependency>
