tools demo - resilience4j - 一个轻量级、易于使用的容错库

--- a/spring-boot-example/E.tools/pom.xml
+++ b/spring-boot-example/E.tools/pom.xml
@@ -30,6 +30,7 @@
         <module>kaptcha</module>
         <module>oshi-core</module>
         <module>p6spy</module>
+        <module>resilience4j</module>
         <module>springdoc-openapi</module>
         <module>springfox-swagger</module>
         <module>user-agent-utils</module>
