--- a/spring-boot-example/B.features/logging/pom.xml
+++ b/spring-boot-example/B.features/logging/pom.xml
@@ -20,6 +20,7 @@
   <modules>
     <module>logging-log4j2</module>
     <module>logging-logback</module>
+    <module>logging-tomcat-access</module>
   </modules>
 
 </project>
