feature example: JDBC - Java 连接、操作数据库

--- a/spring-boot-example/B.features/pom.xml
+++ b/spring-boot-example/B.features/pom.xml
@@ -25,6 +25,7 @@
     <module>event-listener</module>
     <module>externalized-configuration</module>
     <module>i18n</module>
+    <module>jdbc</module>
     <module>logging</module>
     <module>scheduling</module>
     <module>sending-email</module>
